--- a/SG PSI/Podfile
+++ b/SG PSI/Podfile
@@ -10,6 +10,7 @@ target 'SG PSI' do
   pod 'ObjectMapper', '~> 2.2'
   pod 'AlamofireObjectMapper', '~> 4.0'
   pod 'GoogleMaps'
+  pod 'SwiftKVC'
 
   target 'SG PSITests' do
     inherit! :search_paths
